--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     padding-right: 24px;
     padding-top: calc(12px + env(safe-area-inset-top, 40px));
     padding-bottom: 12px;
-    border-bottom: 1px solid rgba(220,220,220,0.9);
+    border-bottom: 1px solid rgba(202, 202, 202, 0.9);
     text-align: center;
     flex-shrink: 0;
     background: rgba(255, 255, 255, 0.8);
